syntax = "proto3";

option go_package = "git.liero.se/opentelco/go-swpx/proto/resource";
import "networkelement/element.proto";
import "provider/provider.proto";


package resource;

message Empty {}


message VersionResponse {
  string version = 1;
}

message TechnicalPortInformationResponse {
  string response = 1;
}

// used in request
message NetworkElement {
  string hostname = 1;
  string ip = 2;  
  string interface = 3;
  int64 interface_index = 4;
  int64 physical_index = 5;
  provider.Configuration conf = 6;
}

message NetworkElementInterface {
  int64 index = 1;
  string description = 2;
  string alias = 3;
}

message PhysicalPortInformation {
  string name = 1;
  string oid = 2;
  string value = 3;
}

message PhysicalPortinformationResponse {
  repeated PhysicalPortInformation data = 1;
}

message VRPTransceiverInformation {
  string optical_vendor_sn = 1;
  int64 optical_temperature = 2;
  int64 optical_voltage = 3;
  int64 optical_bias_current = 4;
  int64 optical_rx_power = 5;
  int64 optical_tx_power = 6;
  string optical_vendor_pn = 7;
}



service Resource {
  rpc Version(Empty) returns (VersionResponse);
  rpc TechnicalPortInformation(NetworkElement) returns (networkelement.Element);
  rpc MapInterface(NetworkElement) returns (NetworkElementInterface);
  rpc GetPhysicalPort(NetworkElement) returns (PhysicalPortinformationResponse);
  rpc GetVRPTransceiverInformation(NetworkElement) returns (VRPTransceiverInformation);
}

